--- a/templates/forms/new_venue.html
+++ b/templates/forms/new_venue.html
@@ -30,11 +30,27 @@
       <div class="form-group">
         <label for="genres">Genres</label>
         <small>Ctrl+Click to select multiple</small>
-        {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true) }}
+        {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.genres, autofocus = true) }}
       </div>
       <div class="form-group">
-          <label for="genres">Facebook Link</label>
-          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
+          <label for="facebook_link">Facebook Link</label>
+          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.facebook_link, autofocus = true) }}
+        </div>
+        <div class="form-group">
+          <label for="image_link">Image Link</label>
+          {{ form.image_link(class_ = 'form-control', placeholder='http://', id=form.image_link, autofocus = true) }}
+        </div>
+        <div class="form-group">
+          <label for="website">Website</label>
+          {{ form.website(class_ = 'form-control', placeholder='http://', id=form.website, autofocus = true) }}
+        </div>
+        <div class="form-group">
+          <label for="seeking_talent">Seeking Talent</label>
+          {{ form.seeking_talent(class_ = 'form-control ', id=form.seeking_talent, autofocus = true) }}
+        </div>
+        <div class="form-group">
+          <label for="seeking_describtion">Seeking Describtion</label>
+          {{ form.seeking_describtion(class_ = 'form-control ', id=form.seeking_describtion, autofocus = true) }}
         </div>
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
